--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <head>
+    <title>TermoApp</title>
+    <link rel="icon" type="image/png" href="../src/images/logo.png">
+  </head>
   <body>
       <div id="root">
 
